[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Actors/Actor.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Actors/Enemy/Enemy.gd" type="Script" id=2]

[sub_resource type="Shader" id=1]
resource_local_to_scene = true
code = "shader_type canvas_item;

uniform vec4 flash_color : hint_color = vec4(1.0);
uniform float opacity : hint_range(0.0, 1.0) = 0.0;

void fragment(){
	vec4 current_color = texture(TEXTURE, UV);
	if (current_color.a == 0.0){
		discard;
	}
	
	COLOR = mix(current_color, flash_color, opacity);
}"

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/opacity = 0.0

[node name="Enemy" groups=["Enemy"] instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="AnimatedSprite" parent="." index="0"]
material = SubResource( 2 )

[node name="ChaseArea" type="Area2D" parent="." index="4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChaseArea" index="0"]

[node name="AttackArea" type="Area2D" parent="." index="5"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea" index="0"]

[node name="PathLine" type="Line2D" parent="." index="6"]
visible = false
width = 3.0
default_color = Color( 1, 0, 0, 1 )
